headers_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/conditions.web: |
      [
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Strict-Transport-Security",
            "values": ["max-age=31536000; includeSubDomains"]
          }
        },
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Content-Security-Policy-Report-Only",
            "values": ["default-src 'self'"]
          }
        }
      ]
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: web
            port:
              number: 8080
