test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
      alb.ingress.kubernetes.io/backend-protocol: HTTP
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:271772263795:certificate/dea1fa76-8df9-4cc6-8b92-62b80d1b4f22
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 5005}]'
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
      #alb.ingress.kubernetes.io/tags: map-migrated
      alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-TLS13-1-2-2021-06"
      alb.ingress.kubernetes.io/conditions.gitlab-webservice-default: |
        [
          {
           "field": "http-header",
           "httpHeaderConfig": {
           "httpHeaderName": "Strict-Transport-Security",
            "values": ["max-age=31536000; includeSubDomains"]
          }
         },
         {
           "field": "http-header",
           "httpHeaderConfig": {
           "httpHeaderName": "Content-Security-Policy-Report-Only",
             "values": ["default-src 'self'"]
           }
         }
        ]
   
spec:
  ingressClassName: alb
  rules:
  - host: git.ami.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-registry
            port:
              number: 5000
